# scrybe

./: .cursorrules  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  justfile  pyproject.toml
.claude/skills/headless-ui-verify/: SKILL.md  scrybe-app.sh
.claude/skills/mermaid-png/: SKILL.md
.claude/skills/repository-roadmap/: SKILL.md
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml  security-audit.yml
docs/: BUILD_AND_TEST.md  PRIVACY.md  TRIAGE.md  mcp-contract-0.6.json  rpc-contract-0.6.md
docs/adr/: 0001-python-outside-rust-inside.md
docs/design/: cli-rpc.md  mcp-rebuild.md  vision-conversational-editing.md
docs/plugins/: README.md  example_plugin.py
experimental/: README.md
experimental/scrybe-panels/: Cargo.toml  README.md
experimental/scrybe-panels/src/: calibration.rs  lib.rs  orchestrator.rs  phase.rs
experimental/scrybe-swarm/: Cargo.toml  README.md
experimental/scrybe-swarm/src/: activity.rs  chat.rs  lib.rs
npm/: README.md  package.json
npm/cli/: README.md  package.json  platforms.json
npm/cli/lib/: binary.cjs
npm/scripts/: build-platform-package.mjs  sync-versions.mjs
npm/scrybe-ai/: README.md  package.json
npm/test/: resolve.test.mjs
packaging/chocolatey/: scrybe.nuspec.tmpl
packaging/chocolatey/tools/: chocolateyinstall.ps1.tmpl
packaging/homebrew/: scrybe.rb.tmpl
scripts/: check-internal-specifics.sh
scrybe/: __init__.py
scrybe-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scrybe-app/src/: editor.ts  main.ts  mcp_panel.ts  pathbar.ts  plugins.ts  preview.ts  sidebar.ts  state.ts  status_bar.ts  tabs.ts  terminal.ts  toast.ts  toolbar.ts  vcs_panel.ts
scrybe-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
scrybe-app/src-tauri/capabilities/: default.json
scrybe-app/src-tauri/icons/: icon.icns
scrybe-app/src-tauri/src/: cli_rpc.rs  lib.rs  main.rs  menu.rs
scrybe-app/src/styles/: mcp_panel.css  pathbar.css  (+8 more)
scrybe-cli/: Cargo.toml  README.md  pyproject.toml
scrybe-cli/python/scrybe_cli/: __init__.py
scrybe-cli/src/: lib.rs  lint.rs  main.rs  rpc_client.rs  viewer.rs  wrap.rs
scrybe-cli/tests/: rpc_socket.rs
scrybe-core/: Cargo.toml  README.md
scrybe-core/src/: ast.rs  change.rs  content.rs  document.rs  error.rs  lib.rs  plugin.rs  workspace.rs
scrybe-mcp-client/: Cargo.toml  README.md
scrybe-mcp-client/src/: client.rs  config.rs  harness.rs  jsonrpc.rs  lib.rs  registry.rs  stdio_transport.rs  transport.rs
scrybe-mcp-server/: Cargo.toml  README.md  pyproject.toml
scrybe-mcp-server/python/scrybe_mcp_server/: __init__.py
scrybe-mcp-server/scrybe_mcp_server/: __init__.py  __main__.py
scrybe-mcp-server/src/: lib.rs  main.rs  server.rs  tools.rs
scrybe-mcp-server/tests/: docx_packaging.rs  live_app_open.rs  mcp_contract.rs
scrybe-mcp-server/tests/fixtures/: call_invalid_args.json  call_lint_success.json  call_no_live_app.json  call_remote_app_error.json  call_unknown_tool.json
scrybe-mermaid/: Cargo.toml  README.md  pyproject.toml
scrybe-mermaid-render/: COMPATIBILITY.md  Cargo.toml  PLAN.md  README.md  STORIES.md  drake-swarm.toml  pyproject.toml
scrybe-mermaid-render/.claude/: settings.local.json
scrybe-mermaid-render/.drake/: swarm-gitea-pilot.toml  swarm.toml
scrybe-mermaid-render/examples/: provenance_drive.rs
scrybe-mermaid-render/scripts/: gen_oracle.sh
scrybe-mermaid-render/src/: error.rs  lib.rs  png.rs  python.rs
scrybe-mermaid-render/src/layout/: flowchart.rs  mod.rs  sequence.rs  types.rs
scrybe-mermaid-render/src/parser/: flowchart.rs  lexer.rs  mod.rs  sequence.rs  sequence.rs.bak  types.rs
scrybe-mermaid-render/src/svg/: flowchart.rs  mod.rs  primitives.rs  sequence.rs
scrybe-mermaid-render/tests/: test_trace_flowchart.rs  test_trace_sequence.rs
scrybe-mermaid-render/tests/common/: grader.rs  mod.rs
scrybe-mermaid-render/tests/fixtures/flowchart/: 01_minimal.mmd  02_linear.mmd  03_decision.mmd  04_node_shapes.mmd  05_edge_types.mmd  06_left_right.mmd  07_subgraph.mmd  08_quoted_labels.mmd  09_long_labels.mmd  10_complex.mmd
scrybe-mermaid-render/tests/fixtures/sequence/: 01_minimal.mmd  02_request_response.mmd  03_login_flow.mmd  04_activation.mmd  05_notes.mmd  06_alt_block.mmd  07_loop_block.mmd  08_arrow_types.mmd  09_long_labels.mmd  10_complex.mmd
scrybe-mermaid/python/scrybe_mermaid/: __init__.py
scrybe-mermaid/src/: codec.rs  error.rs  lib.rs
scrybe-mermaid/tests/: test_python_quickstart.py
scrybe-meta/: README.md  pyproject.toml
scrybe-meta/src/scrybe_ai/: __init__.py
scrybe-panels/: Cargo.toml  README.md
scrybe-panels/src/: calibration.rs  lib.rs  orchestrator.rs
scrybe-plugin-docx/: pyproject.toml
scrybe-plugin-docx/scrybe_plugin_docx/: __init__.py  main.py  mermaid.py  renderer.py
scrybe-plugin-docx/tests/: test_renderer.py
scrybe-py/: Cargo.toml  README.md  pyproject.toml  python_flag.txt
scrybe-py/python/scrybe/: __init__.py
scrybe-py/src/: lib.rs
scrybe-py/tests/: test_bindings.py
scrybe-ratatui/: Cargo.toml  README.md
scrybe-ratatui/src/: lib.rs  render.rs  view.rs
scrybe-render/: Cargo.toml  README.md
scrybe-render/src/: html.rs  lib.rs  math.rs  mermaid.rs  theme.rs
scrybe-render/src/themes/: dark.css  default.css  solarized.css
scrybe-rpc/: Cargo.toml  README.md
scrybe-rpc/src/: client.rs  lib.rs
scrybe-rpc/tests/: wire_contract.rs
scrybe-swarm/: Cargo.toml  README.md
scrybe-swarm/src/: activity.rs  chat.rs  lib.rs
scrybe-tools/: Cargo.toml  README.md
scrybe-tools/examples/: render_drive.rs
scrybe-tools/src/: autolaunch.rs  figures.rs  lib.rs  lint.rs  schema.rs
scrybe-tools/src/tools/: editor.rs  export.rs  lint.rs  mermaid.rs  mod.rs  render.rs  tabs.rs  ui.rs
scrybe-tui/: Cargo.toml  README.md
scrybe-tui/src/: app.rs  lib.rs  main.rs  render.rs  view.rs
scrybe-tui/tests/: tmux-drive.sh
scrybe-vcs/: Cargo.toml  README.md
scrybe-vcs/src/: auth.rs  lib.rs  remote.rs  repo.rs  types.rs
