[workspace]
resolver = "2"
members = [
    "scrybe-core",
    "scrybe-render",
    "scrybe-mcp-client",
    "scrybe-mcp-server",
    "scrybe-mermaid",
    "scrybe-mermaid-render",
    "scrybe-vcs",
    "scrybe-py",
    "scrybe-cli",
    "scrybe-rpc",
    "scrybe-tools",
    "scrybe-ratatui",
    "scrybe-tui",
    "scrybe-app/src-tauri",
]

# Shared package metadata. Every member inherits the version via
# `version.workspace = true`, so a release bumps all crates in lock-step
# from one place. (See RELEASE.md; issue #128.)
[workspace.package]
version = "0.6.1"

# Workspace-level dependency pins keep all crates in lock-step.
[workspace.dependencies]
# Core utilities
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
toml = "1.0"

# Crypto / content addressing
blake3 = "1.8"
sha2 = "0.10"
ciborium = "0.2"   # deterministic CBOR for content-addressed hashing

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web / networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }

# Markdown / rendering
pulldown-cmark = "0.12"
syntect = "5.2"

# Git
git2 = { version = "0.20", default-features = false, features = ["vendored-openssl"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"
which = "7"

# PNG / image codec (scrybe-mermaid iTXt)
png = "0.17"
base64 = "0.22"

# PyO3
pyo3 = { version = "0.29", features = ["auto-initialize"] }

# Tauri 2
tauri = { version = "2", features = ["protocol-asset"] }
tauri-build = { version = "2", features = [] }

# Internal crates — version pinned (=) so cargo publish accepts the
# tarballs (path-deps without versions are rejected at publish time).
# Workspace lock-step: every release bumps all members together.
scrybe-core       = { path = "scrybe-core",       version = "=0.6.1" }
scrybe-render     = { path = "scrybe-render",     version = "=0.6.1" }
scrybe-mcp-client = { path = "scrybe-mcp-client", version = "=0.6.1" }
scrybe-mcp-server = { path = "scrybe-mcp-server", version = "=0.6.1" }
scrybe-mermaid    = { path = "scrybe-mermaid",    version = "=0.6.1" }
scrybe-vcs        = { path = "scrybe-vcs",        version = "=0.6.1" }
scrybe-py         = { path = "scrybe-py",         version = "=0.6.1" }
scrybe-rpc        = { path = "scrybe-rpc",        version = "=0.6.1" }
scrybe-tools      = { path = "scrybe-tools",      version = "=0.6.1" }
scrybe-ratatui    = { path = "scrybe-ratatui",    version = "=0.6.1" }
scrybe-mermaid-render = { path = "scrybe-mermaid-render", version = "=0.6.1" }

# Adopted pure-Rust Mermaid → SVG renderer (#132 spike-Pass, 2026-07-17).
# SVG-only by default here; the `png` feature (resvg) is opted into per-crate.
mermaid-rs-renderer = { version = "0.3.1", default-features = false }

[workspace.lints.clippy]
explicit_iter_loop     = "warn"
flat_map_option        = "warn"
implicit_clone         = "warn"
needless_for_each      = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args  = "warn"
useless_conversion     = "warn"
use_self               = "warn"
