# SPDX-License-Identifier: Apache-2.0
# Root meta-package: `pip install -e .` installs scrybe-cli and scrybe-mcp-server
# from their local maturin sub-packages, making scrybe feel like a Python tool.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrybe"
version = "0.1.0a1"
description = "MCP-native cross-platform Markdown editor"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"
Issues   = "https://github.com/hartsock/scrybe/issues"

[tool.hatch.build.targets.wheel]
packages = ["scrybe"]

# ---------------------------------------------------------------------------
# pip install -e . gives you the meta-package.
# To also compile and install the Rust binaries run:
#   just editable          (maturin develop for all Rust sub-packages)
# or individually:
#   cd scrybe-cli          && maturin develop --release
#   cd scrybe-mcp-server   && maturin develop --release
# ---------------------------------------------------------------------------
