[package]
name = "scrybe-cli"
version = "0.1.20260507"
edition = "2021"
description = "Scrybe CLI — headless render/lint/mermaid/panel command-line tool"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hartsock/scrybe"

[[bin]]
name = "scrybe"
path = "src/main.rs"

[lib]
name = "scrybe_cli"
path = "src/lib.rs"

[dependencies]
scrybe-core.workspace = true
scrybe-render.workspace = true
scrybe-mermaid.workspace = true
scrybe-mcp-server.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[lints]
workspace = true
