[package]
name = "scrybe-cli"
version.workspace = true
edition = "2021"
description = "Scrybe CLI — headless render/lint/mermaid/panel command-line tool"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["markdown", "cli", "mcp", "scrybe", "editor"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "scrybe"
path = "src/main.rs"

[lib]
name = "scrybe_cli"
path = "src/lib.rs"

[dependencies]
scrybe-core.workspace = true
scrybe-render.workspace = true
scrybe-mermaid.workspace = true
scrybe-mcp-server.workspace = true
scrybe-rpc.workspace = true
scrybe-tools.workspace = true
# `scrybe view` (#162) renders through the published rendering crate —
# scrybe-cli must NOT depend on the unpublished scrybe-tui (#194).
scrybe-ratatui.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[lints]
workspace = true
