[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "scrybe-cli"
version = "0.1.20260507"
description = "Scrybe CLI — headless Markdown render/lint/mermaid tool (binary wheel)"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"

[tool.maturin]
bindings = "bin"
bin-name = "scrybe"
manifest-path = "Cargo.toml"
