[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "scrybe-cli"
version = "0.1.0a1"
description = "Scrybe CLI — headless Markdown render/lint/mermaid tool (binary wheel)"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"

[tool.maturin]
bindings = "bin"
bin-name = "scrybe"
manifest-path = "Cargo.toml"
