[package]
name = "scrybe-core"
version = "0.1.20260507"
edition = "2021"
description = "Scrybe core — AST, Document, ContentAddressable, Plugin trait, Workspace"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hartsock/scrybe"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
chrono.workspace = true
blake3.workspace = true
ciborium.workspace = true
pulldown-cmark.workspace = true

[lints]
workspace = true
