[package]
name = "scrybe-core"
version = "0.1.0"
edition = "2021"
description = "Scrybe core — AST, Document, ContentAddressable, Plugin trait, Workspace"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
chrono.workspace = true
blake3.workspace = true
ciborium.workspace = true
pulldown-cmark.workspace = true

[lints]
workspace = true
