[package]
name = "scrybe-core"
version.workspace = true
edition = "2021"
description = "Scrybe core — AST, Document, ContentAddressable, Plugin trait, Workspace"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["markdown", "ast", "document", "content-addressed", "scrybe"]
categories = ["text-processing", "data-structures"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
hex.workspace = true
chrono.workspace = true
blake3.workspace = true
ciborium.workspace = true
pulldown-cmark.workspace = true

[lints]
workspace = true
