[package]
name = "scrybe-mcp-client"
version = "0.1.0-a1"
edition = "2021"
description = "Scrybe MCP client — outbound MCP, registers N agent servers"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[dependencies]
scrybe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
toml.workspace = true
dirs = "5"

[lints]
workspace = true
