[package]
name = "scrybe-mcp-server"
version.workspace = true
edition = "2021"
description = "Scrybe MCP server — inbound MCP tools: open/read/section/edit/diff/find/embed/lint"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["mcp", "markdown", "ai-tools", "scrybe", "editor"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "scrybe-mcp-server"
path = "src/main.rs"

[dependencies]
scrybe-core.workspace = true
scrybe-render.workspace = true
scrybe-mermaid.workspace = true
scrybe-rpc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
which.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[lints]
workspace = true
