[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "scrybe-mcp-server"
version = "0.1.20260507"
description = "Scrybe MCP server — standalone inbound MCP server (binary wheel)"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"

[tool.maturin]
bindings = "bin"
manifest-path = "Cargo.toml"
