[package]
name = "scrybe-mermaid"
version = "0.1.0-a1"
edition = "2021"
description = "Scrybe mermaid — standalone PNG iTXt codec, embeds Mermaid source in PNG metadata"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[features]
default = []
python = ["pyo3"]
extension-module = ["pyo3/extension-module"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
png.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
pyo3 = { version = "0.28", features = ["auto-initialize"], optional = true }

[lints]
workspace = true
