[package]
name = "scrybe-mermaid"
version = "0.2.1-dev"
edition = "2021"
description = "Scrybe mermaid — standalone PNG iTXt codec, embeds Mermaid source in PNG metadata"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["mermaid", "png", "itxt", "diagram", "scrybe"]
categories = ["multimedia::images", "encoding"]

[features]
default = []
python = ["pyo3"]
extension-module = ["pyo3/extension-module"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
png.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
# auto-initialize is for Rust binaries that *embed* Python; this crate is
# an extension module that Python loads. The flag breaks manylinux's
# static-linked Python builds. Only the `extension-module` feature is
# wanted here, gated through the workspace `extension-module` feature.
pyo3 = { version = "0.28", features = ["abi3-py39"], optional = true }

[lints]
workspace = true
