[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "scrybe-mermaid"
version = "0.6.3"
description = "Scrybe Mermaid — standalone PNG iTXt codec (Rust-backed)"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.maturin]
module-name = "scrybe_mermaid._rust"
python-source = "python"
features = ["python", "extension-module"]
manifest-path = "Cargo.toml"
