[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrybe.ai"
version = "0.1.0"
description = "Scrybe — MCP-native Markdown editor. Metapackage installing the full Python toolkit (library + CLI + MCP server + Mermaid codec)."
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Shawn Hartsock" }]
keywords = ["markdown", "editor", "mcp", "ai", "scrybe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "scrybe-py == 0.1.0",
    "scrybe-cli == 0.1.0",
    "scrybe-mcp-server == 0.1.0",
    "scrybe-mermaid == 0.1.0",
]

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"
Source = "https://github.com/hartsock/scrybe"
Issues = "https://github.com/hartsock/scrybe/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scrybe_ai"]

[tool.hatch.build.targets.sdist]
include = [
    "src/scrybe_ai",
    "README.md",
    "pyproject.toml",
]
