[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrybe-plugin-docx"
version = "0.6.0"
description = "Scrybe plugin — render Markdown to Word (.docx) with embedded Mermaid PNGs"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = [
    "python-docx>=1.1",
    "mistune>=3.0",
    "Pillow>=10.0",
    # Embeds the Mermaid source into rendered diagram PNGs (iTXt), so the
    # PNGs in the .docx round-trip back to source via `scrybe_mermaid.extract`.
    "scrybe-mermaid>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-mock>=3"]

[project.scripts]
scrybe-docx = "scrybe_plugin_docx.main:main"

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"
Issues = "https://github.com/hartsock/scrybe/issues/3"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrybe_plugin_docx*"]
