[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "scrybe"
version = "0.1.20260507"
description = "Scrybe — MCP-native Markdown editor library (Rust-backed)"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"

[tool.maturin]
module-name = "scrybe._rust"
python-source = "python"
features = ["python", "extension-module"]
manifest-path = "Cargo.toml"
