[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "scrybe-py"
version = "0.1.1rc1"
description = "Scrybe — MCP-native Markdown editor library (Rust-backed). Provides the `scrybe` import package."
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/hartsock/scrybe"

[tool.maturin]
module-name = "scrybe._rust"
python-source = "python"
features = ["python", "extension-module"]
manifest-path = "Cargo.toml"
