# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Shawn Hartsock and contributors

[package]
name = "scrybe-ratatui"
version.workspace = true
edition = "2021"
description = "Render a scrybe-core Markdown document as styled ratatui text — an embeddable Markdown view for any ratatui app"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["markdown", "ratatui", "tui", "terminal", "widget"]
categories = ["command-line-interface", "text-processing"]

# The whole point of this crate is the tiny dependency surface (#194):
# the AST and the terminal styling layer, nothing else. No crossterm, no
# file IO, no clap, no terminal backend — consumers own their own event
# loop and drop `MarkdownView` into their own layout.
[dependencies]
scrybe-core.workspace = true
ratatui.workspace = true
# Pinned to the same version ratatui 0.29 pins, so `view::wrapped_height`
# measures graphemes with byte-identical width tables to the ones the
# Paragraph widget wraps with. Revisit on any ratatui bump (itself a semver
# event — see lib.rs).
unicode-width = "=0.2.0"
# Optional — pulled in only by the `highlight` feature (#164) so the
# default dependency surface stays scrybe-core + ratatui.
syntect = { workspace = true, optional = true }

[dev-dependencies]
# Tests pin `view::wrapped_height` to ratatui's own (unstable, feature-gated)
# `Paragraph::line_count` as an oracle. Dev-dependencies never reach
# consumers of the published crate — the library itself must not (and does
# not) enable unstable ratatui features.
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }

[features]
# Syntect syntax highlighting for fenced code blocks (#164). Off by
# default to preserve the tiny dependency surface above; enabling it adds
# syntect (and its transitive deps) and nothing else. Unknown languages
# still fall back to the plain rendering.
highlight = ["dep:syntect"]
