[package]
name = "scrybe-render"
version = "0.2.1-dev"
edition = "2021"
description = "Scrybe render — Markdown-to-HTML pipeline, syntect, KaTeX/Mermaid"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["markdown", "html", "render", "syntect", "scrybe"]
categories = ["text-processing"]

[dependencies]
scrybe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
pulldown-cmark.workspace = true
syntect.workspace = true

[lints]
workspace = true
