[package]
name = "scrybe-rpc"
version = "0.1.0"
edition = "2021"
description = "Scrybe CLI ↔ GUI wire protocol — JSON-RPC 2.0 types over a Unix socket."
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
