[package]
name = "scrybe-rpc"
version = "0.3.0"
edition = "2021"
description = "Scrybe CLI ↔ GUI wire protocol — JSON-RPC 2.0 types over a Unix socket."
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
homepage = "https://github.com/hartsock/scrybe"
readme = "README.md"
keywords = ["json-rpc", "ipc", "unix-socket", "scrybe"]
categories = ["network-programming", "encoding"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
