[package]
name = "scrybe-vcs"
version = "0.1.0-a1"
edition = "2021"
description = "Scrybe VCS — Gitea-first git2 wrapper, multi-remote, ssh-agent auth"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[dependencies]
scrybe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
git2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
