[package]
name = "scrybe-vcs"
version.workspace = true
edition = "2021"
description = "Scrybe VCS — git2 wrapper, configurable multi-remote role policy, ssh-agent auth"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"
# Internal — consumed by scrybe-app only; not published to crates.io.
publish = false

[dependencies]
scrybe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
git2.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
