[package]
name = "scrybe-swarm"
version = "0.5.20260507"
edition = "2021"
description = "Scrybe swarm — async-nats wrapper for swarm-chat sidebar and activity feed"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[dependencies]
scrybe-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
async-nats.workspace = true

[lints]
workspace = true
