[package]
name = "scrybe-app"
version = "0.1.0"
edition = "2021"
description = "Scrybe desktop application — Tauri 2 + CodeMirror 6"
license = "Apache-2.0"
repository = "https://github.com/hartsock/scrybe"

[lib]
name = "scrybe_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
scrybe-core.workspace = true
scrybe-render.workspace = true
scrybe-mcp-client.workspace = true
scrybe-mcp-server.workspace = true
scrybe-vcs.workspace = true
scrybe-rpc.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
tauri.workspace = true
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
dirs = "5"
which.workspace = true
notify = "6"

[lints]
workspace = true
